--- a/0.md
+++ b/0.md
@@ -87,7 +87,7 @@ npx sequelize-cli model:generate --name story --attributes name:string,content:t
 | ------------------------------------------------------------------------------------------------- | ------ | --- |
 | Server contains sequelize models and migrations for Space & Story                                 | 2      | ok  |
 | Records should not be allowed to be created if the fields marked as required contain empty values | 2      | ok  |
-| User, Space and Story models are correctly related                                                | 2      |
+| User, Space and Story models are correctly related                                                | 2      | ok  |
 | Seeders are present to create at least 2 spaces and 4 stories                                     | 2      |
 | Total                                                                                             | 8      |
 
